# task-api

./: README.md  pyproject.toml  runserver.bat
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py
app/core/: config.py
app/crud/: user.py
app/db/: session.py
app/models/: __init__.py  user.py
app/schemas/: user.py
app/utils/: security.py
scripts/: create_tables.py
