[tool.poetry]
name = "task-api"
version = "0.1.0"
description = ""
authors = ["FrancoRegg <francoreggiardo97@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.11.7"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
bcrypt = ">=4.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
